--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTT Platform Clone</title>
+    <title>Rina's OTT Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Rina's OTT Platform</h1>
+        <h1 style="font-family: Papyrus, fantasy;">Rina's OTT Platform</h1>
         <nav>
             <input type="text" id="search" placeholder="Search...">
         </nav>
