--- a/details.html
+++ b/details.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content Details</title>
+    <title>Rina's OTT Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>OTT Platform Clone</h1>
+        <h1 style="font-family: Papyrus, fantasy;">Rina's OTT Platform</h1>
     </header>
     <main>
         <section id="content-details">
@@ -40,8 +40,8 @@
                 { id: 15, title: "Dark", image: "images/series5.jpg", genre: "Thriller", rating: "9.0/10", description: "Dark description..." },
                 { id: 16, title: "Squid Game", image: "images/series6.jpg", genre: "Comedy", rating: "8.2/10", description: "Squid Game description..." },
 
-                { id: 5, title: "Wednesday", image: "images/recommended1.jpg", genre: "Sci-Fi", rating: "8.7/10", description: "Wednesday description..." },
-                { id: 6, title: "Stranger Things", image: "images/recommended2.jpg", genre: "Horror", rating: "7.9/10", description: "Stranger Things description..." },
+                { id: 21, title: "Wednesday", image: "images/recommended1.jpg", genre: "Sci-Fi", rating: "8.7/10", description: "Wednesday description..." },
+                { id: 22, title: "Stranger Things", image: "images/recommended2.jpg", genre: "Horror", rating: "7.9/10", description: "Stranger Things description..." },
             ];
 
             function getQueryParam(param) {
