--- a/details.html
+++ b/details.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style="font-family: Papyrus, fantasy;">Rina's OTT Platform</h1>
+        <h1 style="font-family: Papyrus, fantasy;">Rina's Ott Platform</h1>
     </header>
     <main>
         <section id="content-details">
